--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,12 +4,16 @@
     box-sizing: border-box;
 }
 
+body {
+    touch-action: none;
+}
+
 #c {
     display: block;
     width: var(--w);
     height: var(--h);
     background-color: black;
-    touch-action: manipulate;
+    pointer-events: none;
 }
 
 body {
@@ -49,8 +53,4 @@ body {
     display: flex;
     flex-direction: column;
     border: 1px solid red;
-}
-
-#ui > #control #top {
-
 }
