--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,7 +50,18 @@ body {
     bottom: 0;
     left: 0;
     margin: auto;
+    width: var(--w);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     border: 1px solid red;
+}
+
+#ui > #controls #l {
+    margin-left: 0;
+    margin-right: auto;
+}
+
+#ui > #controls #r {
+    margin-right: 0;
+    margin-left: auto;
 }
