Added healthbar and an enemy

--- a/assets/css/stats.css
+++ b/assets/css/stats.css
@@ -17,7 +17,8 @@
     justify-content: center;
     background-color: red;
     width: var(--sw);
-    margin: auto;
+    margin-left: 0;
+    margin-right: auto;
 }
 
 #ui > #stats > #health-c #health {
