--- a/assets/css/level-editor.css
+++ b/assets/css/level-editor.css
@@ -1,10 +1,45 @@
 
 #ui > #level-editor {
-    border: 1px solid red;
-    height: var(--h);
+    pointer-events: none;
+    background-color: rgba(10, 10, 10, 0.8);
+    padding: 10px;
+}
+
+#ui > #level-editor button {
+    pointer-events: auto;
+    border: 2px solid black;
+    color: black;
+    padding: 8px;
+    border-radius: 10px;
+}
+
+#ui > #level-editor button:active {
+    border: 2px solid gray;
+    color: blue;
+    background-color: gray;
 }
 
 #ui > #level-editor #blocks {
-    border: 1px solid green;
-    height: 100px;
+    height: 90px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-top: 3px solid rgba(20, 20, 20, 0.9);
+    border-bottom: 3px solid rgba(20, 20, 20, 0.9);
+    background-color: rgba(50, 50, 100, 0.6);
+}
+
+#ui > #level-editor > #blocks button {
+    border: 2px solid black;
+    border-radius: 50px / 10px;
+    width: 64px;
+    height: 64px;
+}
+
+#ui > #level-editor > #blocks button.block-selected {
+    border-color: black;
+    background-color: gray;
 }
