--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ body {
     display: block;
     width: var(--w);
     height: var(--h);
-    background-color: white;
+    background-color: black;
     pointer-events: none;
     margin: auto;
 }
